# engines/gallery/app/serializers/gallery/v1/activity_serializer.rb
@@ -22,6 +22,7 @@ module Gallery
                        :remixed,
                        :liked,
                        :favorited,
+                       :implemented,
                        :scopes,
                        :audiences,
                        :inspirations,
