# engines/gallery/config/routes.rb
@@ -8,5 +8,6 @@ Gallery::Engine.routes.draw do
         match 'activities/:id/like', to: 'activities#like', via: [:get]
         match 'activities/:id/favorite', to: 'activities#favorite', via: [:get]
         match 'activities/:id/remix', to: 'activities#remix', via: [:post]
+        match 'activities/:id/implement', to: 'activities#implement', via: [:post]
     end
 end
