# swagger/v1/swagger.json
@@ -1228,6 +1228,102 @@
         }
       }
     },
+    "/gallery/v1/activities/{id}/implement": {
+      "post": {
+        "summary": "Implemented this activity",
+        "tags": [
+          "Activities"
+        ],
+        "security": [
+          {
+            "Bearer": [
+
+            ]
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "description": "I implemented this activity",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "description": "activity id",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "date_implementation": {
+                  "type": "string",
+                  "example": "2019-05-01"
+                },
+                "place_implementation": {
+                  "type": "string",
+                  "example": "MIT"
+                },
+                "number_participants": {
+                  "type": "string",
+                  "example": "Implementação em classe"
+                }
+              },
+              "required": [
+                "date_implementation"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Activity implemented",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/activities_object"
+                  }
+                }
+              },
+              "required": [
+                "data"
+              ]
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "$ref": "#/definitions/error_object"
+            }
+          },
+          "404": {
+            "description": "Activity Not Found",
+            "schema": {
+              "$ref": "#/definitions/error_object"
+            }
+          },
+          "422": {
+            "description": "Entity error",
+            "schema": {
+              "$ref": "#/definitions/error_object"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/error_object"
+            }
+          }
+        }
+      }
+    },
     "/gallery/v1/audiences/": {
       "get": {
         "summary": "Get Audiences",
@@ -3149,6 +3245,10 @@
           "example": true
         },
         "favorited": {
+          "type": "boolean",
+          "example": true
+        },
+        "implemented": {
           "type": "boolean",
           "example": true
         },
